feat: button-reset

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
           <div class="input-wrapper flex">
             <label class="sr-only" for="url">Cole a URL do YouTube aqui</label>
             <input required type="url" name="url" id="url" placeholder="Cole a URL do YouTube aqui">
-            <i class="ph ph-x-circle"></i>
+            <button type="reset" class="button-reset">
+              <i class="ph ph-x-circle"></i>
+            </button>
           </div>
           <button>
               Transcrever
